# music_player

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  DirectoryParser.cpp  DirectoryParser.h  File.h  Metadata.h  Player.cpp  Player.h  main.cpp  pch.h
src/UI/: MainWindow.cpp  MainWindow.h  MainWindow.ui
tests/: CMakeLists.txt
